--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,7 +2,7 @@
         Reduced initial load time.
         Reduced processing time
         All functions of AriumMSEval are now fully integrated into the main app. 
-        Sample and Group specific scaling was moved to the Group Tab, Scaling and Transformation moved to General Options Tab
+        Sample- and group-specific scaling moved to the Group tab, scaling and transformation moved to the Feature Scaling panel in the Evaluation view.
         changed transformation option "log" to "Natural log" for chlarification
         Separate option panels for Peak Alignment and Spectral Alignment.
 	Before merging groups, m/z values of features are now converted from [M+H]+/[M-H]- to M.
