--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,12 +1,12 @@
 1.1.0:  Background Code restructure.
         Reduced initial load time.
-        Reduced processing time
+        Reduced System memory usage.
         All functions of AriumMSEval are now fully integrated into the main app. 
-        Sample- and group-specific scaling moved to the Group tab, scaling and transformation moved to the Feature Scaling panel in the Evaluation view.
+        Sample and Group specific scaling was moved to the Group Tab, Scaling and Transformation moved to General Options Tab
         changed transformation option "log" to "Natural log" for chlarification
         Separate option panels for Peak Alignment and Spectral Alignment.
-	Before merging groups, m/z values of features are now converted from [M+H]+/[M-H]- to M.
-	Save and import project as custom file format.
+	    Before merging groups, m/z values of features are now converted from [M+H]+/[M-H]- to M.
+	    Save and import project as custom file format.
 
     It is now possible to define the following settings for each group separately:
         Internal standard processing options
@@ -17,23 +17,23 @@
         Added custom file parser for .mzXML and .mzML files. 
         Added compatibility for zlib compressed files
         The Number of groups limit was removed, more groups can now be added via the "+ Tab".
-        The Start Time and End Time fields now refer to the measurement with the most scans and no longer to the smallest.
+        The Start Time and End Time fields now refer to the measurement with the most scans and no longer to the shortest.
         Shorter measurements are now expanded to the size of the longest measurement by appending blank scans, rather than truncating all measurements to the size of the smallest.
         Input units are now displayed inside edit fields.
         The average number of scans and the average scan rate will be displayed for the data files in a group after file selection.
-	It is now possible to augment groups with different number of files.
-	Unaugmented groups can be processed alongside augmented groups.
-        Added option for log10, cube root and reciprocal transformation.	
-	Transformation and scaling can be changed after processing.
+	    It is now possible to augment groups with different number of files.
+	    Unaugmented groups can be processed alongside augmented groups.
         After processing, a table with the following feature data opens automatically: 
         ID, feature name (M@RT), intensity of individual measurements, average intensity, standard deviation, fold change, p-value, unique feature in group,
         feature not found in reference, occurrence per group, occurrence in all groups, Mass [M] and retention time [s].
+        Added option for log10, cube root and reciprocal transformation.	
+	    Transformation and scaling can be changed after processing. Using the "Apply Changes Button" recalculates the results and displays a new output table.
         
     New Plots:
         Feature intensity distribution plot after applied transformation and scaling 
-	p-Value distribution plot
-	Normal probability plot for feature intensity after applied transformation and scaling.
-	Plot Feature: Plots the integrated area for features. Specific feature IDs can be selected. Additionally, you can filter for significant, unique, or non-unique features.
+	    p-Value distribution plot
+	    Normal probability plot for feature intensity after applied transformation and scaling.
+	    Plot Feature: Plots the integrated area for features. Specific feature IDs can be selected. Additionally, you can filter for significant, unique, or non-unique features.
 
     Minor Bugfixes:
         Calculation error for NH3 neutral loss masses.
