Changes to plots
Several changes to plots to prevent overlaying of text.
Naming scheme of augmented groups has been changed from "Group1+Group+...GroupN" to "Extended Group N". N is replaced by the assigned letter when choosing augmentation.
Volcano Plot, Heatmap and Cloud Plot are no longer plotted in one window but are split into several windows.
Feature distribution and p-value distribution now use the entire available space.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -28,6 +28,7 @@
         feature not found in reference, occurrence per group, occurrence in all groups, Mass [M] and retention time [s].
         Added option for log10, cube root and reciprocal transformation.	
 	    Transformation and scaling can be changed after processing. Using the "Apply Changes Button" recalculates the results and displays a new output table.
+        The number of loadings displayed in biplots can now be selected. The selection plots the number of loadings with the largest sum of the first three principal components.
         
     New Plots:
         Feature intensity distribution plot after applied transformation and scaling 
